See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.75.00

              pbmtext: Add -dry-run

              pbmtext: Add -dump-sheet

              pbmtext: Speedup: renders directly in raw PBM.

              pbmreduce: add -randomseed.

              pbmreduce: fix undefined behavior when scale factor argument is
              too big.  Always present (pbmreduce was new in September 1989).

              pbmtext: Fix bug: invalid memory reference when text contains
              code points > 127.  Broken in 10.74.

              Build: Remove use of strndup so it compiles on Mac OS X 10.6.
              Broken in 10.74.

16.03.27 BJH  Release 10.74.00

              pbmtext: produce same image when you run pbmtext with -width
              explicitly set to the width you get when you don't specify
              width.

              pbmtext: ignore -nomargins when -width is specified.

              pbmtext: report when line ends are dropped because of
              truncation.

              pbmtext: Fix bug: if input has a code point that is not in the
              font, Pbmtext substitutes space, but behavior is undefined if
              font doesn't have space either.  Now it aborts the program in
              that case.

              pbmtext: fix bug: Respect -width when specified.

              pbmtext: fix bug: Deal correctly with negative -space.

              pbmtext: fix bug: Consider all characters in line, not just
              first and last, in determining line width.

              libnetbpm font facility (so pbmtext): fix bug: undefined
              behavior when font definitions are invalid in any of various
              ways.

              libnetpbm font facility (so pbmtext): fix incorrect font names
              in error messages.

              pnmtopsnr: Add -machine, -max .
