@@ -76,19 +76,29 @@ struct font {
     int fcols, frows;
 };
 
-struct font* pbm_defaultfont(const char* const which);
-struct font*
+struct font *
+pbm_defaultfont(const char* const which);
+
+struct font *
 pbm_dissectfont(const bit ** const font,
                 unsigned int const frows,
                 unsigned int const fcols);
-struct font* pbm_loadfont(const char * const filename);
-struct font* pbm_loadpbmfont(const char * const filename);
-struct font* pbm_loadbdffont(const char * const filename);
-void pbm_dumpfont(struct font * const fnP);
+
+struct font *
+pbm_loadfont(const char * const filename);
+
+struct font *
+pbm_loadpbmfont(const char * const filename);
+
+struct font *
+pbm_loadbdffont(const char * const filename);
+
+void
+pbm_dumpfont(struct font * const fontP,
+             FILE *        const ofP);
 
 extern struct font pbm_defaultFixedfont;
 extern struct font pbm_defaultBdffont;
-
 
 #ifdef __cplusplus
 }
